ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Management_Note__c/Management_Note__c.object-meta.xml
<CustomObject>
    <label>Management Note</label>
    <nameField>
        <label>Management Note Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>